dev: trying to fix headers on mobile

--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -68,8 +68,8 @@ a:hover {
   }
 
   .heading-large-article {
-    font-size: 4rem;
-    margin-top: 2rem;
+    font-size: 3.5rem;
+    margin-top: 2.5rem;
     letter-spacing: 2px;
     text-shadow: 3px 3px $white;
   }
